--- a/rails/controllers_views/assignments/survey_form/app/views/survey/show.html.erb
+++ b/rails/controllers_views/assignments/survey_form/app/views/survey/show.html.erb
@@ -1,7 +1,9 @@
 
 <div class="">
-	<% flash.each do|key, value| %>
-		<div class="alert alert-<%= key %>"><%= value %></div>
+	<% if flash[:success] %>
+  		<div id="success">
+  			<p><%= flash[:success] %></p>
+		</div>
 	<% end %>
 </div>	
 
@@ -10,19 +12,19 @@
 	<table>
 		<tr>
 			<td>Name:</td>
-			<td><%= @current_user %></td>
+			<td><%= @result['name'] %></td>
 		<tr>
 		<tr>
 			<td>Dojo Location:</td>
-			<td><%= @location %></td>
+			<td><%= @result['location'] %></td>
 		<tr>
 		<tr>
 			<td>Favorite Language:</td>
-			<td><%= @language %></td>
+			<td><%= @result['language'] %></td>
 		<tr>
 		<tr>
 			<td>Comment:</td>
-			<td><%= @comment %></td>
+			<td><%= @result['comment'] %></td>
 		<tr>
 
 	</table>
