--- a/rails/controllers_views/assignments/number_game/app/assets/stylesheets/games.css.scss
+++ b/rails/controllers_views/assignments/number_game/app/assets/stylesheets/games.css.scss
@@ -1,3 +1,25 @@
 // Place all the styles related to the Games controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+	text-align: center;
+}
+.message {
+	max-width: 200px;
+	margin: 0 auto 10px;
+	padding: 10px;
+}
+.notice {
+	background: red;
+}
+
+.success {
+	background: green;
+}
+
+.play-again {
+	background: green;
+	padding: 5px;
+	max-width: 100px;
+}
