--- a/rails/controllers_views/assignments/number_game/app/views/games/index.html.erb
+++ b/rails/controllers_views/assignments/number_game/app/views/games/index.html.erb
@@ -2,10 +2,10 @@
 <p> I am thinking of a number between 1 and 100 <br/> Take a guess!</p>
 
  <% if flash[:notice] %>
-    <div class="notice"><%= flash[:notice] %></div>
+    <div class="notice message"><%= flash[:notice] %></div>
   <% end %>
    <% if flash[:success] %>
-    <div class="success"><%= flash[:success] %></div>
+    <div class="success message"><%= flash[:success] %></div>
   <% end %>
 
 <form action="/games/" method="post">
