--- a/rails/controllers_views/assignments/ninja_gold/app/views/rpg/index.html.erb
+++ b/rails/controllers_views/assignments/ninja_gold/app/views/rpg/index.html.erb
@@ -41,8 +41,8 @@
 		<div id="activities">
 			<p> Activities: </p>
 			<div class="activites-area">
-				<% @activities.each do |activity| %>
-					<p class="<%= activity[:color] %>"> <%= activity[:activity] %></p>
+				<% @activities.reverse.each do |activity| %>
+					<p class=""> <%= activity %></p>
 				<% end %>
 			</div>
 		</div>
