--- a/rails/controllers_views/assignments/wall/app/views/users/index.html.erb
+++ b/rails/controllers_views/assignments/wall/app/views/users/index.html.erb
@@ -1,7 +1,12 @@
 <div class="container">
 	<div class="content-lt">
 		<h1>Register</h1>
-
+		<!-- Error check for user save added -->
+		<% if flash[:notice] %>
+			<% flash[:notice].each do |notice| %>
+				<p><%= notice %></p>
+			<% end %>
+		<% end %>
 		<form action="/users" method="post">
 			<input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
 			<p><label for="user[username]"> Username: </label><input type="text" name="user[username]"> </p>
@@ -12,7 +17,10 @@
 
 	<div class="content-rt">
 		<h1>Sign In</h1>
-
+		<!-- Error check added -->
+		<% if flash[:danger] %>
+			<p><%= flash[:danger] %></p>
+		<% end %>
 		<form action="/login" method="post">
 			<input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
 			<p><label for="user[username]"> Username: </label><input type="text" name="user[username]"> </p>
@@ -20,8 +28,4 @@
 			<input type="submit" value ="Sign In">
 		</form>
 	</div>
-
-
-
-
 </div>
