--- a/rails_2/users/app/views/layouts/application.html.erb
+++ b/rails_2/users/app/views/layouts/application.html.erb
@@ -7,8 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+<%= render 'layouts/header' %>
+	<div class="container">
+	<% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <% end %>
+		<%= yield %>
+	</div>
+  <%= render 'layouts/footer' %>
 </body>
 </html>
