--- a/rails_2/users/app/views/layouts/_header.html.erb
+++ b/rails_2/users/app/views/layouts/_header.html.erb
@@ -1,13 +1,30 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
+<header class="navbar  navbar-inverse">
   <div class="container">
     <%= link_to "Users", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
           <li><%= link_to "Users", users_path %></li>
+          <li> <%= link_to "Secrets", secrets_path %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Account <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li>
+                <%= link_to "Profile ", current_user %>
+              </li>
+              <li>
+                <%= link_to "Edit ", edit_user_path(current_user) %>
+              </li>
+              <li>
+                <%= link_to "Delete Account ", current_user, method: :delete,
+                                  data: { confirm: "You sure?" }%>
+              </li>
               <li>
                 <%= link_to "Log Out", logout_path, method: "delete" %>
               </li>
+          </li>
         <% else %>
           <li><%= link_to "Log In", login_path %></li>
         <% end %>
