--- a/rails_2/users/app/views/users/show.html.erb
+++ b/rails_2/users/app/views/users/show.html.erb
@@ -1,2 +1,24 @@
-<h1> <%= @user.name %>'s Page</h1>
+<h1> <%= @user.name %></h1>
 
+<div class="row">
+	<div class="col-md-4">
+		<%= form_for(@secrets) do |s| %>
+			<%= s.label :content, "New Secret" %>
+			<%= s.text_area :content, class: 'form-control' %>
+
+			<%= s.submit "Add Secret", class: "btn btn-primary"  %>
+		<% end %>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-md-6">
+	 	<h3> All Secrets </h3>
+	 	<% @all_secrets.each do |secret| %>
+	 		<p> <%= secret.content %> </p>
+	 	<% end  %>
+	</div>
+	<div class="col-md-6">
+	 	<h3> Secrets Liked</h3>
+	</div>
+</div>
